WebSocket: started service implementation

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" type="image/png" href="../assets/icons/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="assets/icons/favicon.png">
     <title>Wave</title>
 
     <style>
@@ -36,7 +36,7 @@
             justify-content: flex-start;
             align-items: center;
             cursor: default;
-            background: black url("../assets/banner/banner_color.jpg") no-repeat center;
+            background: black url("assets/banner/banner_color.jpg") no-repeat center;
             background-size: cover;
         }
 
