Database and WebSocket: completed and tested deleteContactRequest

--- a/test/MockClient/public/index.html
+++ b/test/MockClient/public/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress HtmlUnknownTarget -->
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -8,7 +9,7 @@
     <meta name="description" content="Mock client for WebSocket Channel testing"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <title>Mock client</title>
+    <title>Wave Channel</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
