[Wave completed] Documentation: completed

--- a/test/MockClient/public/index.html
+++ b/test/MockClient/public/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Mock client for WebSocket Channel testing"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+    <meta name="author" content="Giacomo Guidotto">
     <title>Wave Channel</title>
 </head>
 <body>
