--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="assets/icons/favicon.png">
+    <meta name="author" content="Giacomo Guidotto">
     <title>Wave</title>
 
     <style>
